<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.coreprotect</groupId>
  <artifactId>CoreProtect</artifactId>
  <version>20.1</version>
  <properties>
    <project.branch>development</project.branch>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <filters>
                <filter>
                  <artifact>*:*:*:*</artifact>
                  <excludes>
                    <exclude>**/*.java</exclude>
                    <exclude>**/*.c</exclude>
                    <exclude>META-INF/maven/**</exclude>
                    <exclude>META-INF/services/**</exclude>
                  </excludes>
                </filter>
              </filters>
              <relocations>
                <relocation>
                  <pattern>org.bstats</pattern>
                  <shadedPattern>net.coreprotect</shadedPattern>
                </relocation>
              </relocations>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>paper-repo</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>
    <repository>
      <id>codemc-repo</id>
      <url>https://repo.codemc.org/repository/maven-public/</url>
    </repository>
    <repository>
      <id>enginehub-repo</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
  </repositories>
  <dependencies>
    <!--
    paper-api (<= 1.16): com.destroystokyo.paper
    spigot-api: org.spigotmc
    bukkit: org.bukkit
    -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.17-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.bstats</groupId>
      <artifactId>bstats-bukkit-lite</artifactId>
      <version>1.8</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-bukkit</artifactId>
      <version>7.0.0-SNAPSHOT</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.bukkit</groupId>
          <artifactId>bukkit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
</project>